--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,33 @@
+alembic==1.0.10
+astroid==1.6.6
+backports.functools-lru-cache==1.5
+certifi==2019.3.9
+chardet==3.0.4
+Click==7.0
+configparser==3.7.4
+enum34==1.1.6
 Flask==1.0.2
 flask-marshmallow==0.10.0
+Flask-Migrate==2.4.0
 Flask-SQLAlchemy==2.4.0
+futures==3.2.0
+idna==2.8
+isort==4.3.18
+itsdangerous==1.1.0
+Jinja2==2.10.1
+lazy-object-proxy==1.3.1
+Mako==1.0.9
+MarkupSafe==1.1.1
 marshmallow==2.19.2
 marshmallow-sqlalchemy==0.16.2
+mccabe==0.6.1
+pylint==1.9.4
+python-dateutil==2.8.0
+python-editor==1.0.4
 requests==2.21.0
+singledispatch==3.4.0.3
+six==1.12.0
+SQLAlchemy==1.3.3
+urllib3==1.24.3
+Werkzeug==0.15.2
+wrapt==1.11.1
