--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ isort==4.3.18
 itsdangerous==1.1.0
 Jinja2==2.10.1
 lazy-object-proxy==1.3.1
+linecache2==1.0.0
 Mako==1.0.9
 MarkupSafe==1.1.1
 marshmallow==2.19.2
@@ -28,6 +29,8 @@ requests==2.21.0
 singledispatch==3.4.0.3
 six==1.12.0
 SQLAlchemy==1.3.3
+traceback2==1.4.0
+unittest2==1.1.0
 urllib3==1.24.3
 Werkzeug==0.15.2
 wrapt==1.11.1
